# median-cut

./: LICENSE  README.md  median-cut.cabal  stack.yaml
data/: final.ppm
src/: Main.hs
